<resources>
    <string name="app_name">Hw4</string>
    <string name="birth_hint">請輸入生日</string>
    <string name="name_hint">請輸入姓名</string>
    <string name="birth_output_hint">生日:</string>
    <string name="constellation_output_hint">星座:</string>
    <string name="record_hint">顯示紀錄</string>
    <string name="title_activity_record">record</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
